# telemetry-workloan-test

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/telemetry_dbms/: docker-compose.yml  package.json
apps/telemetry_java/: Dockerfile  docker-compose.yml  package.json  pom.xml  postman.json
apps/telemetry_rust/: Cargo.toml  Dockerfile  docker-compose.yml  package.json  postman.json  production.json
apps/telemetry_rust_no_orm/: .env  .env.prod  .env.sample  Cargo.toml  Dockerfile  default.json  docker-compose.yml  log4rs.yml  package.json  postman.json  production.json
apps/telemetry_rust_no_orm/migrations/: 20221217175226_table_info.sql
apps/telemetry_rust_no_orm/src/: main.rs
apps/telemetry_rust_no_orm/src/configuration/: config_database.rs  config_loader.rs
apps/telemetry_rust_no_orm/src/controller/: controller_common.rs
apps/telemetry_rust_no_orm/src/controller/response/: generic_response.rs
apps/telemetry_rust_no_orm/src/dao/: service_telemetry.rs
apps/telemetry_rust_no_orm/src/dao/sql/: insert.sql  max_req_id.sql  query.sql
apps/telemetry_rust_no_orm/src/route/: routes_util.rs
apps/telemetry_test/: package.json
apps/telemetry_test/reports-json/: report_java.json  report_java_k_read.json  report_java_k_write.json  report_java_k_writeread.json  report_java_read.json  report_java_write.json  report_js.json  report_js_k_read.json  report_js_k_write.json  report_js_k_writeread.json  report_js_read.json  report_rust.json  (+12 more)
apps/telemetry_ts/: .env  .env.production  Dockerfile  docker-compose.yml  package.json  postman.json
(+41 files in other folders)
