[package]
name = "telemetry_rust_no_orm"
version = "0.1.0"
edition = "2021"
authors=["Andrei Dodu"]

[dependencies]
tokio = { version = "1.22.0", features = ["macros",  "sync"]  }
warp = "0.3.3"
serde_json = "1.0.89"
serde = {version = "1.0.148", features = ["derive"] }
serde_derive = "1.0.148"
chrono = { version = "0.4", features = ["serde"] }
log4rs="1.2.0"
log = "0.4.17"  
lazy_static="1.4.0"
async_once="0.2.6"
config = "0.13.2"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "postgres" , "chrono"] }
dotenv = "0.15.0"